# blog-django-poetry

./: .dockerignore  .env  .gitignore  .isort.cfg  Dockerfile  DockerfileDev  POETRY.md  README.md  docker-compose.yml  pylintrc  pyproject.toml  setup.cfg  tox.ini
blog_python/: asgi.py  settings.py  urls.py  wsgi.py
blog_python/core/: admin.py  models.py  serializers.py  views.py
blog_python/core/management/commands/: seed.py  seedsuperuser.py
blog_python/core/migrations/: 0001_initial.py
blog_python/support/: django_helpers.py
scripts/: start-lint.sh  start-tests.sh  start.sh  wait-for-it.sh
tests/: test_blog_python.py
tests/apps/core/: test_views.py
